# prova

./: CMakeLists.txt  Observer.h  SFMLConfig.cmake  SFMLProgressBar.cpp  SFMLProgressBar.h  Subject.cpp  Subject.h  main.cpp
test/: aggiornaTest.cpp  avanzamentoBarraTest.cpp
